--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,7 @@
-.App-logo {
-    animation: App-logo-spin infinite 20s linear;
-    height: 40vmin;
+.content {
+    margin-top: 4em;
 }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
-
-.h2 {
-    -webkit-text-stroke: 1px white;
+.heading {
+    padding: 3em 2em;
 }
