--- a/src/components/TopBar.css
+++ b/src/components/TopBar.css
@@ -1,3 +1,15 @@
 .new-article-btn {
     margin-right: 2em
 }
+
+.favorites-icon button {
+    border: 2px solid #58d9fc;
+    border-radius: 10px;
+    padding: 5px;
+    margin-right: 0.7em;
+    color: #4cd8ff;
+}
+
+.topbar {
+    background: white
+}
